--- a/assets/css/man1.css
+++ b/assets/css/man1.css
@@ -2,7 +2,7 @@ html {
   height: 100%;
 }
 body {
-  background-color: #e8d5c5 !important;
+  /* background-color: #e8d5c5 !important; */
   height: 100%;
 }
 
