--- a/assets/assets/css/base.css
+++ b/assets/assets/css/base.css
@@ -1,5 +1,5 @@
 :root {
-    --bg-body: #e8d5c5;
+    --bg-body: #FFF1D9;
     --bg-main: #F6BE8F;
     --bg-button: #77552f;
 }
@@ -22,6 +22,11 @@ body {
 
 .bg-body {
     background-color: var(--bg-body);
+}
+
+.main {
+    height: 99vh;
+    position: relative;
 }
 
 @media (min-width: 575.98px) {
@@ -49,6 +54,7 @@ body {
     border-radius: 50%;
     background: white;
     font-size: 30px;
+    cursor: pointer;
 }
 
 
@@ -60,9 +66,30 @@ body {
     color: white;
 }
 
+.btn-mobile:hover {
+    color: white;
+}
+
 
 /* body*/
 
 .main-body {
     margin-top: 1rem;
+}
+
+
+/* overlay main*/
+
+.overlay-main {
+    position: absolute;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    cursor: pointer;
 }
