--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -40,13 +40,22 @@ body {
 
 /* top*/
 
-.container-back_button {}
+.container-back_button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.container-back_button i {
+    font-size: 1.2rem;
+    color: white;
+}
 
 .container-home-and-question {
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
-    /* margin: auto; */
+    margin-top: 0.5rem;
+    padding: 0 1rem;
 }
 
 .container-home-and-question i {
@@ -72,11 +81,16 @@ body {
     color: white;
 }
 
+.btn-scan {
+    color: white;
+}
+
 
 /* body*/
 
 .main-body {
     margin-top: 1rem;
+    padding: 0 1rem;
 }
 
 
@@ -94,4 +108,29 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
     cursor: pointer;
+}
+
+
+/* guide */
+
+.guide {
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
+    position: absolute;
+    bottom: 1px;
+}
+
+.image-guide {}
+
+.text-box-guide {
+    border-radius: 1rem;
+    padding: 0.5rem;
+}
+
+.icon-item-guide {
+    background-color: white;
+    color: black;
+    border-radius: 50%;
+    text-align: center;
 }
