--- a/public/assets/css/man1-base.css
+++ b/public/assets/css/man1-base.css
@@ -26,9 +26,33 @@ html {
     /* height: 100%; */
     border-radius: 10px;
     background-color: #a4efb9;
-    margin: 0 10rem;
+    margin: 0 2rem;
     position: relative;
     z-index: 1;
+}
+
+.mySlides-artifacts .mySlides-artifacts--item.icon-choice {
+    --length: 100%;
+    width: var(--length);
+    height: var(--length);
+    position: absolute;
+    z-index: 1;
+    background-image: url(../../image/icon-choice.png);
+    background-repeat: no-repeat;
+    top: -25%;
+    left: 20%;
+}
+
+.mySlides-artifacts .mySlides-artifacts--item {
+    --length: 100%;
+    width: var(--length);
+    height: var(--length);
+    position: absolute;
+    z-index: 1;
+    background-image: url(../../image/Bao\ vat\ 1\ 1.png);
+    background-repeat: no-repeat;
+    top: 0px;
+    left: 25%;
 }
 
 .mySlides-artifacts img {
