--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700&display=swap);
 .test {
   display: flex;
   align-items: center;
@@ -16,24 +17,25 @@
 
 body {
   background-color: #242424;
+  font-family: "Roboto", sans-serif !important;
 }
 
 .bg-button {
-  background-color: #77552f;
+  background-color: #0284C7;
 }
 
 .bg-main {
-  background-color: #f6be8f;
+  background-color: #FFFFFF;
 }
 
 .bg-body {
-  background-color: #fff1d9;
+  background-color: #E0E7FF;
 }
 
 .main {
   height: 99vh;
   position: relative;
-  background-color: #fff1d9;
+  background-color: #E0E7FF;
   padding: 0;
   overflow-y: scroll;
 }
@@ -54,21 +56,19 @@ body {
 .container-back_button {
   position: absolute;
   top: 0;
-  left: 0;
   z-index: 1;
   cursor: pointer;
 }
 
 .container-back_button i {
   font-size: 1.2rem;
-  color: white;
+  color: black;
 }
 
 .container-home-and-question {
   margin-top: 0.5rem;
   padding: 0 1rem;
 }
-
 .container-home-and-question i {
   width: 50px;
   height: 50px;
@@ -81,13 +81,13 @@ body {
 
 /* button */
 .btn-mobile {
-  background-color: #77552f;
+  background-color: #0284C7;
   border-radius: 5px;
   color: white;
 }
-
 .btn-mobile:hover {
   color: white;
+  background-color: #0369A1;
 }
 
 .btn-scan {
@@ -128,7 +128,7 @@ body {
   bottom: 1px;
 }
 .guide .text-box-guide {
-  border-radius: 1rem;
+  border-radius: 0.8rem;
   padding: 0.5rem;
 }
 .guide .icon-item-guide {
