--- a/public/assets/css/done.css
+++ b/public/assets/css/done.css
@@ -16,7 +16,7 @@
   width: calc(100% + 100px);
   height: calc(100% + 100px);
   border-radius: 50%;
-  background-color: #f6be8f;
+  background-color: #FFEDD5;
   top: -50vh;
   transform: rotate(-2.78deg);
   left: calc(-1 * (100% + 100px - 100% + 10%) / 2);
