--- a/src/assets/scss/base/_mixins.scss
+++ b/src/assets/scss/base/_mixins.scss
@@ -8,3 +8,8 @@
     height: $length;
     border-radius: 50%;
 }
+
+@mixin box-shadow {
+    box-shadow: 1px 1px 8px 1px rgb(231 231 231 / 92%);
+    border: 1px #F1F2F6 solid;
+}
